improve accessibility: color contrast issues with some of the palettes

--- a/src/styles/modules/_header.scss
+++ b/src/styles/modules/_header.scss
@@ -10,11 +10,7 @@ header.main-header {
   overflow: hidden;
   position: relative;
   margin-top: $s11;
-  background-color: var(--primary-color, #{$primary-color});
-
-  @include dark-mode {
-    background-color: var(--primary-color-dark, #{$primary-color-dark});
-  }
+  background-color: var(--primary-color-dark, #{$primary-color-dark});
 
   .name {
     @include font-size(7);
